welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: ';' expected but 'def' found.
dogHouse def(for(x<-1 to 4){
         ^