welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
dogHouse def(for(x<-1 to 4){
	avance(2);gauche(); 
}

